# leichte-sprache

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  install.sh  pyproject.toml  requirements.txt
.github/workflows/: black.yml
dataset/: create_singular_dataset.py  transform_singular_dataset.py
docs/examples/: example_training_args_dpo.yaml
leichte_sprache/: constants.py
leichte_sprache/dataset/: crawler.py  create_singular_dataset.py  data_management.py  transform_singular_dataset.py
leichte_sprache/dataset/files/: konvens_train.csv
leichte_sprache/evaluation/: run_model.py
leichte_sprache/training/: README.md  train.py  utils.py
leichte_sprache/utils/: db_utils.py  model_utils.py
src/leichte_sprache/: constants.py
src/leichte_sprache/dataset/: crawler.py  create_singular_dataset.py  data_management.py  dpo_dataset.py  parse_pdfs.py  transform_singular_dataset.py
src/leichte_sprache/dataset/files/: test_data_sg.csv
src/leichte_sprache/evaluation/: run_model.py  score.py  test_classifier.py
src/leichte_sprache/inference/: inference.py
src/leichte_sprache/training/: example_training_args.yaml  example_training_args_classification.yaml  quantize_model.py  train.py  train_classifier.py  train_dpo.py
src/leichte_sprache/utils/: db_utils.py  model_utils.py  training_utils.py  utils.py
tests/: test_db_utils.py  test_score.py
