[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leichte_sprache"
requires-python = ">=3.11"
authors = [
  {name = "Nasrin Saef", email = "saefnasrin@gmail.com"},
]
description = "Generate text in a simplified version of German (Leichte Sprache)"
readme = "README.md"
dynamic = ["version", "dependencies"]

[project.scripts]
clean_parallel_dataset = "leichte_sprache.dataset.data_management:remove_bad_generations"
crawl_all = "leichte_sprache.dataset.data_management:crawl_all_sources"
create_singular_dataset = "leichte_sprache.dataset.data_management:create_singular_dataset"
initialize_db = "leichte_sprache.dataset.data_management:setup_crawler_db_table"
push_dataset_to_hub = "leichte_sprache.dataset.data_management:create_hf_dataset"
run_data_pipeline = "leichte_sprache.dataset.data_management:run_data_pipeline"
run_singular_dataset = "leichte_sprache.dataset.data_management:transform_to_singular_dataset"
translate_singular_dataset = "leichte_sprache.dataset.transform_singular_dataset:transform_singular_dataset"

[tool.setuptools.dynamic]
version = {attr = "leichte_sprache.__version__"}
dependencies = {file = ["requirements.txt"]}